# firefox-policy-generator

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: build.yml
docs/: DISA_STIG.md  HOME_USER_SECURITY.md  IMPLEMENTATION_PLAN.md  NIST_SP_800_171.md
src/ffpolicy/: __init__.py  __main__.py  cli.py
src/ffpolicy/core/: errors.py  generator.py  importer.py  paths.py  presets.py  privilege.py  validator.py  version_check.py
src/ffpolicy/fetchers/: amo_client.py  base.py  cache.py  schema_sync.py
src/ffpolicy/gui/: category_tree.py  export_target_dialog.py  extension_manager.py  form_builder.py  highlight.py  import_source_dialog.py  json_preview.py  main_window.py  policy_description.py  preset_details.py  style.py  validation_panel.py
src/ffpolicy/gui/widgets/: field_widgets.py
src/ffpolicy/models/: amo.py  extension.py  policy_document.py  policy_schema.py
src/ffpolicy/packager/: build_appimage.sh  ffpolicy.desktop  ffpolicy.spec
src/ffpolicy/resources/: categories.yaml  schema_backup.json
src/ffpolicy/resources/presets/: disa_stig.yaml  home_user_relaxed.yaml  (+4 more)
tests/fixtures/: sample_input.yaml
tests/fixtures/golden/: sample_policies.json
tests/functional/: test_cli.py  test_export_paths.py  test_golden.py  test_import.py
tests/unit/: test_amo_client.py  test_export_import_dialogs.py  test_extension_manager.py  test_generator.py  test_gui.py  test_policy_description.py  test_presets.py  test_resources.py  test_schema_sync.py  test_validator.py  test_version_check.py
